Refactor HostedService & add dockercompose

--- a/src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/appsettings.Development.json
+++ b/src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/appsettings.Development.json
@@ -10,6 +10,6 @@
     "Server": "localhost",
     "DatabaseName": "simplestore.productcatalog",
     "AccountName": "sa",
-    "AccountPassword": "P@ssword"
+    "AccountPassword": "P@ssw0rd123"
   }
 }
