--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,7 +4,7 @@ services:
 
   sqlserver:
     environment:
-      SA_PASSWORD: "P@ssw0rd123"
+      SA_PASSWORD: "P@ssword"
       ACCEPT_EULA: "Y"
     ports:
-      - 1433:1433
+      - "1433:1433"
