--- a/src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/appsettings.Development.json
+++ b/src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/appsettings.Development.json
@@ -3,13 +3,14 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore": "Debug"
     }
   },
   "DatabaseInformation": {
     "Server": "localhost",
     "DatabaseName": "simplestore.productcatalog",
     "AccountName": "sa",
-    "AccountPassword": "P@ssw0rd123"
+    "AccountPassword": "P@ssword"
   }
 }
