--- a/src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/appsettings.json
+++ b/src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/appsettings.json
@@ -1,16 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "AllowedHosts": "*",
   "DatabaseInformation": {
-    "Server": "",
-    "DatabaseName": "",
-    "AccountName": "",
-    "AccountPassword":  "" 
-  } 
+    "Server": "localhost",
+    "DatabaseName": "simplestore.productcatalog",
+    "AccountName": "sa",
+    "AccountPassword": "P@ssword"
+  }
 }
