--- a/src/Services/GraphQL/SimpleStore.GraphQLApi/Properties/launchSettings.json
+++ b/src/Services/GraphQL/SimpleStore.GraphQLApi/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5001",
+      "applicationUrl": "http://localhost:5000",
       "sslPort": 0
     }
   },
@@ -17,11 +17,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SimpleStore.ProductCatalogApi": {
+    "SimpleStore.GraphQLApi": {
       "commandName": "Project",
       "launchBrowser": true,
       //"launchUrl": "weatherforecast",
-      "applicationUrl": "http://localhost:5001",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
