--- a/src/Services/GraphQL/SimpleStore.GraphQLApi/SimpleStore.GraphQLApi.csproj
+++ b/src/Services/GraphQL/SimpleStore.GraphQLApi/SimpleStore.GraphQLApi.csproj
@@ -5,10 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\..\..\..\services.json" Link="services.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="10.3.6" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.3.6" />
     <PackageReference Include="HotChocolate.Stitching" Version="10.3.6" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\SimpleStore.Infrastructure.Common\SimpleStore.Infrastructure.Common.csproj" />
   </ItemGroup>
 
 
