Refactor: - moving common function to BuildingBlocks - fix the migration - change the port of SQLServer to 14333 to avoid conflict with the difference one

--- a/src/Services/ProductCatalog/SimpleStore.ProductCatalog.Infrastructure.EfCore/SimpleStore.ProductCatalog.Infrastructure.EfCore.csproj
+++ b/src/Services/ProductCatalog/SimpleStore.ProductCatalog.Infrastructure.EfCore/SimpleStore.ProductCatalog.Infrastructure.EfCore.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\SimpleStore.ProductCatalog.Domain\SimpleStore.ProductCatalog.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
