--- a/src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/appsettings.json
+++ b/src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "DatabaseInformation": {
-    "Server": "localhost",
+    "Server": "localhost,14333",
     "DatabaseName": "simplestore.productcatalog",
     "AccountName": "sa",
     "AccountPassword": "P@ssword"
