--- a/src/Services/Inventory/SimpleStore.InventoryApi/SimpleStore.InventoryApi.csproj
+++ b/src/Services/Inventory/SimpleStore.InventoryApi/SimpleStore.InventoryApi.csproj
@@ -5,10 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\..\..\..\services.json" Link="services.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="HotChocolate.AspNetCore" Version="10.3.6" />
+    <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.3.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
