--- a/src/Services/Inventories/SimpleStore.Inventories.Infrastructure.EfCore/SimpleStore.Inventories.Infrastructure.EfCore.csproj
+++ b/src/Services/Inventories/SimpleStore.Inventories.Infrastructure.EfCore/SimpleStore.Inventories.Infrastructure.EfCore.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\SimpleStore.Inventories.Domain\SimpleStore.Inventories.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
