Dispatching DomainEvent after SaveChanges

--- a/src/BuildingBlocks/SimpleStore.Infrastructure.EfCore/SimpleStore.Infrastructure.EfCore.csproj
+++ b/src/BuildingBlocks/SimpleStore.Infrastructure.EfCore/SimpleStore.Infrastructure.EfCore.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleStore.Domain\SimpleStore.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
