--- a/src/Services/Inventories/SimpleStore.InventoriesApi/SimpleStore.InventoriesApi.csproj
+++ b/src/Services/Inventories/SimpleStore.InventoriesApi/SimpleStore.InventoriesApi.csproj
@@ -17,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
   </ItemGroup>
 
