--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,9 +2,16 @@ version: "3.7"
 
 services:
 
-  sqlserver:
-    environment:
-      SA_PASSWORD: "P@ssword"
-      ACCEPT_EULA: "Y"
-    ports:
-      - "14333:1433"
+    redis:
+        environment:
+            REDIS_PASSWORD: ""
+            ALLOW_EMPTY_PASSWORD: "yes"
+        ports:
+            - "6379:6379"
+
+    sqlserver:
+        environment:
+            SA_PASSWORD: "P@ssword"
+            ACCEPT_EULA: "Y"
+        ports:
+            - "14333:1433"
