--- a/src/Services/Inventories/SimpleStore.Inventories.Infrastructure.EfCore/SimpleStore.Inventories.Infrastructure.EfCore.csproj
+++ b/src/Services/Inventories/SimpleStore.Inventories.Infrastructure.EfCore/SimpleStore.Inventories.Infrastructure.EfCore.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\SimpleStore.Infra.RedisPubSub\SimpleStore.Infra.RedisPubSub.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\SimpleStore.Infrastructure.Common\SimpleStore.Infrastructure.Common.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\SimpleStore.Infrastructure.EfCore\SimpleStore.Infrastructure.EfCore.csproj" />
     <ProjectReference Include="..\SimpleStore.Inventories.Domain\SimpleStore.Inventories.Domain.csproj" />
