--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -15,3 +15,35 @@ services:
             ACCEPT_EULA: "Y"
         ports:
             - "14333:1433"
+
+    simplestore-productcatalog:
+        ports:
+            - "5001:5001" #http
+        restart: on-failure
+        environment: 
+            - ASPNETCORE_ENVIRONMENT=Production
+            - Services_GraphQLApi_RestUri=http://localhost:5000
+            - Services_ProductCatalogApi_RestUri=http://simplestore-productcatalog:5001
+            - Services_InventoriesApi_RestUri=http://simplestore-inventories:5002
+            - DatabaseInformation_Server=sqlserver
+
+    simplestore-inventories:
+        ports:
+            - "5002:5002" #http
+        restart: on-failure
+        environment: 
+            - ASPNETCORE_ENVIRONMENT=Production
+            - Services_GraphQLApi_RestUri=http://localhost:5000
+            - Services_ProductCatalogApi_RestUri=http://simplestore-productcatalog:5001
+            - Services_InventoriesApi_RestUri=http://simplestore-inventories:5002
+            - DatabaseInformation_Server=sqlserver
+
+    simplestore-graphql:
+        ports:
+            - "5000:5000" #http
+        restart: on-failure
+        environment: 
+            - ASPNETCORE_ENVIRONMENT=Production
+            - Services__GraphQLApi__RestUri=http://localhost:5000
+            - Services__ProductCatalogApi__RestUri=http://simplestore-productcatalog:5001
+            - Services__InventoriesApi__RestUri=http://simplestore-inventories:5002
