--- a/src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/Dockerfile
+++ b/src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/Dockerfile
@@ -1,8 +1,7 @@
 ﻿FROM mcr.microsoft.com/dotnet/core/aspnet:3.1.1-alpine3.10 AS base
 WORKDIR /app
-EXPOSE 80 5001
-RUN apk add icu-libs
-# https://www.abhith.net/blog/docker-sql-error-on-aspnet-core-alpine/
+# https://github.com/dotnet/efcore/issues/18025
+RUN apk add --no-cache icu-libs
 ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1.101-alpine3.10 AS build
@@ -31,10 +30,10 @@ COPY ["src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/SimpleStore.Pro
 RUN dotnet restore "Services/ProductCatalog/SimpleStore.ProductCatalogApi/SimpleStore.ProductCatalogApi.csproj"
 COPY ./src .
 WORKDIR "/src/Services/ProductCatalog/SimpleStore.ProductCatalogApi"
-RUN dotnet build "SimpleStore.ProductCatalogApi.csproj" -c Release -o /app/build
+RUN dotnet build "SimpleStore.ProductCatalogApi.csproj" --nologo --no-restore -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "SimpleStore.ProductCatalogApi.csproj" -c Release -o /app/publish
+RUN dotnet publish "SimpleStore.ProductCatalogApi.csproj" --nologo --no-restore -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
