Feature/support docker (#13)
* support docker (not finished yet_
- connectionstring does not update through docker environment

* Fix EF Migration & docker

* Fix issues while working with docker-compose
- Upgrade version of dotnet core alpine images sdk & aspnet
- rename docker-compose.override to docker-compose-deploy
- Update README

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,39 @@ services:
         networks:
             - simple-microservices
 
+    simplestore-productcatalog:
+        image: simplestore-productcatalog:dev
+        build:
+            context: .
+            dockerfile: src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/Dockerfile
+        networks:
+            - simple-microservices
+        depends_on:
+            - sqlserver
+            - redis
+
+    simplestore-inventories:
+        image: simplestore-inventories:dev
+        build:
+            context: .
+            dockerfile: src/Services/Inventories/SimpleStore.InventoriesApi/Dockerfile
+        networks:
+            - simple-microservices
+        depends_on:
+            - sqlserver
+            - redis
+
+    simplestore-graphql:
+        image: simplestore-graphql:dev
+        build:
+            context: .
+            dockerfile: src/Services/GraphQL/SimpleStore.GraphQLApi/Dockerfile
+        networks:
+            - simple-microservices
+        depends_on:
+            - simplestore-productcatalog
+            - simplestore-inventories
+
 networks:
     simple-microservices:
         name: simple-microservices-network
