Enable Dapr Pub-Sub - Inventories: Subscribe on ProductCreated channel, add CloudNative.CloudEvent in order to parse the request from Dapr Pub-Sub - ProductCatalog: after created new product, it will publish the new product to ProductCreated channel

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -13,16 +13,16 @@ services:
         ports:
             - "14333:1433"
 
-    redis:
-        image: bitnami/redis:5.0.5-debian-9-r124
-        restart: on-failure
-        networks:
-            - simple-microservices
-        environment:
-            REDIS_PASSWORD: ""
-            ALLOW_EMPTY_PASSWORD: "yes"
-        ports:
-            - "6379:6379"
+    # redis:
+    #     image: bitnami/redis:5.0.5-debian-9-r124
+    #     restart: on-failure
+    #     networks:
+    #         - simple-microservices
+    #     environment:
+    #         REDIS_PASSWORD: ""
+    #         ALLOW_EMPTY_PASSWORD: "yes"
+    #     ports:
+    #         - "6379:6379"
 
 networks:
     simple-microservices:
