--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -2,14 +2,11 @@ version: "3.7"
 
 services:
 
-    redis:
-        environment:
-            REDIS_PASSWORD: ""
-            ALLOW_EMPTY_PASSWORD: "yes"
-        ports:
-            - "6379:6379"
-
     sqlserver:
+        image: mcr.microsoft.com/mssql/server:2019-latest
+        restart: on-failure
+        networks:
+            - simple-microservices
         environment:
             SA_PASSWORD: "P@ssword"
             ACCEPT_EULA: "Y"
@@ -28,6 +25,11 @@ services:
             - Redis__RedisAddress=redis:6379
             - DatabaseInformation__Server=sqlserver
             - DatabaseInformation__AccountPassword=P@ssword
+        networks:
+            - simple-microservices
+        depends_on:
+            - sqlserver
+            - redis
 
     simplestore-inventories:
         ports:
@@ -41,6 +43,11 @@ services:
             - Redis__RedisAddress=redis:6379
             - DatabaseInformation__Server=sqlserver
             - DatabaseInformation__AccountPassword=P@ssword
+        networks:
+            - simple-microservices
+        depends_on:
+            - sqlserver
+            - redis
 
     simplestore-graphql:
         ports:
@@ -51,3 +58,12 @@ services:
             - Services__GraphQLApi__RestUri=http://simplestore-graphql:5010
             - Services__ProductCatalogApi__RestUri=http://simplestore-productcatalog:5011
             - Services__InventoriesApi__RestUri=http://simplestore-inventories:5012
+        networks:
+            - simple-microservices
+        depends_on:
+            - simplestore-productcatalog
+            - simplestore-inventories
+
+networks:
+    simple-microservices:
+        name: simple-microservices-network
