--- a/Helm/redis-components/redis-pubsub.yaml
+++ b/Helm/redis-components/redis-pubsub.yaml
@@ -6,6 +6,6 @@ spec:
   type: pubsub.redis
   metadata:
   - name: redisHost
-    value: redis-master:6379
+    value: "redis:6379"
   - name: redisPassword
-    value: tH2YqWOK82
+    value: ""
