--- a/Helm/inventories-api/templates/deployment.yaml
+++ b/Helm/inventories-api/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       annotations:
         dapr.io/enabled: "true"
         dapr.io/id: {{ .Chart.Name | quote }}
-        dapr.io/port: {{ .Values.service.port | quote }}
+        dapr.io/port: "80"
         dapr.io/config: "tracing"
         dapr.io/log-level: "debug"
     spec:
@@ -26,7 +26,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: {{ .Values.service.port }}
+              containerPort: 80
               protocol: TCP
           env:
           - name: ASPNETCORE__ENVIRONMENT
@@ -37,5 +37,3 @@ spec:
             value: {{ .Values.database.password }}
           - name: Services__GraphQLApi__RestUri
             value: {{ .Values.services.graphql | quote }}
-          - name: Services__InventoriesApi__RestUri
-            value: "http://{{ .Chart.Name }}:{{ .Values.service.port }}"
