Remove port 14333 of sql address

--- a/src/Services/Inventories/SimpleStore.InventoriesApi/appsettings.json
+++ b/src/Services/Inventories/SimpleStore.InventoriesApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "DatabaseInformation": {
-    "Server": "localhost,14333",
+    "Server": "localhost",
     "DatabaseName": "simplestore.inventories",
     "AccountName": "sa",
     "AccountPassword": "P@ssword"
