--- a/Helm/inventories-api/values.yaml
+++ b/Helm/inventories-api/values.yaml
@@ -20,5 +20,5 @@ services:
   graphql: "http://graphql:5100"
   
 database:
-  server: "simplestore-sqlserver"
+  server: "simplestore-sqlserver,14333"
   password: "P@ssword"
