--- a/src/Services/Inventories/SimpleStore.InventoriesApi/SimpleStore.InventoriesApi.csproj
+++ b/src/Services/Inventories/SimpleStore.InventoriesApi/SimpleStore.InventoriesApi.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CloudNative.CloudEvents.AspNetCore" Version="1.3.80" />
+    <PackageReference Include="Dapr.AspNetCore" Version="0.6.0-preview01" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="10.4.2" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.4.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
