--- a/src/Services/ProductCatalog/SimpleStore.ProductCatalog.Infrastructure.EfCore/SimpleStore.ProductCatalog.Infrastructure.EfCore.csproj
+++ b/src/Services/ProductCatalog/SimpleStore.ProductCatalog.Infrastructure.EfCore/SimpleStore.ProductCatalog.Infrastructure.EfCore.csproj
@@ -12,11 +12,12 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Dapr.AspNetCore" Version="0.6.0-preview01" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="8.6.2" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
