--- a/Helm/product-catalog-api/Chart.yaml
+++ b/Helm/product-catalog-api/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: product-catalog
+name: simplestore-productcatalogapi
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
