Enabled tye - ability to work with tye whether or not; just only set url for services when disabled tye - define the components and config for dapr that can be run from tye

--- a/components/pubsub.yaml
+++ b/components/pubsub.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: pubsub
+  name: messagebus
 spec:
   type: pubsub.redis
   metadata:
