--- a/components/simplestore-config.yaml
+++ b/components/simplestore-config.yaml
@@ -1,8 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Configuration
 metadata:
-  name: tracing
-  namespace: default
+  name: simplestore-config
 spec:
   tracing:
     samplingRate: "1"
