--- a/components/statestore.yaml
+++ b/components/statestore.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: statestore
+  name: default
 spec:
   type: state.redis
   metadata:
