--- a/tye.yaml
+++ b/tye.yaml
@@ -5,24 +5,33 @@
 #    https://aka.ms/AA7q20u
 #
 name: simple-microservices
+extensions:
+  - name: zipkin
+
+  - name: dapr
+    log-level: debug
+    config: simplestore-config
+  
+  - name: seq
+    logPath: ./.logs
 
 services:
-- name: zipkin
-  image: openzipkin/zipkin
-  bindings:
-    - port: 9411
-      containerPort: 9411
-      protocol: http
+  - name: simplestore-graphql-api
+    project: src/Services/GraphQL/SimpleStore.GraphQLApi/SimpleStore.GraphQLApi.csproj
+    
+  - name: simplestore-productcatalog-api
+    project: src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/SimpleStore.ProductCatalogApi.csproj
+    
+  - name: simplestore-inventories-api
+    project: src/Services/Inventories/SimpleStore.InventoriesApi/SimpleStore.InventoriesApi.csproj
 
-- name: seq
-  image: datalust/seq
-  env:
-    - name: ACCEPT_EULA
-      value: "Y"
-  bindings:
-    - name: ui
-      port: 5340
-      protocol: http
-      containerPort: 80
-    - name: internal
-      port: 5341
+  - name: redis
+    image: redis
+    bindings:
+      - port: 6379
+      
+  - name: placement
+    image: daprio/dapr
+    args: ./placement
+    bindings:
+      - port: 50005 
