Tye: add sqlserver; add ingress - Use sqlserver as a service - Refactor by using - configuration.GetConnectionString of Tye

--- a/src/BuildingBlocks/SimpleStore.Infrastructure.EfCore/SimpleStore.Infrastructure.EfCore.csproj
+++ b/src/BuildingBlocks/SimpleStore.Infrastructure.EfCore/SimpleStore.Infrastructure.EfCore.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SimpleStore.Domain\SimpleStore.Domain.csproj" />
+    <ProjectReference Include="..\SimpleStore.Infrastructure.Common\SimpleStore.Infrastructure.Common.csproj" />
   </ItemGroup>
 
 </Project>
