--- a/src/Services/Inventories/SimpleStore.InventoriesApi/appsettings.json
+++ b/src/Services/Inventories/SimpleStore.InventoriesApi/appsettings.json
@@ -1,9 +1,8 @@
 {
   "AllowedHosts": "*",
-  "DatabaseInformation": {
-    "Server": "localhost",
-    "DatabaseName": "simplestore.inventories",
-    "AccountName": "sa",
-    "AccountPassword": "P@ssword"
+  "DatabaseName": "simplestore.inventories",
+  "ConnectionStrings": {
+    "sqlserver": "",
+    "default": "Data Source=localhost,1433;Initial Catalog=simplestore.inventories;User Id=sa;Password=P@ssword;MultipleActiveResultSets=True;"
   }
 }
