--- a/tye.yaml
+++ b/tye.yaml
@@ -10,10 +10,19 @@ extensions:
 
   - name: dapr
     log-level: debug
-    config: simplestore-config
+    config: simplestore-dapr-config
   
   - name: seq
     logPath: ./.logs
+
+ingress:
+  - name: simplestore-ingress
+    bindings:
+      - port: 8080
+        protocol: http
+    rules:
+      - host: simplestore-graphql-api.local
+        service: graphql-api
 
 services:
   - name: graphql-api
@@ -24,3 +33,14 @@ services:
     
   - name: inventories-api
     project: src/Services/Inventories/SimpleStore.InventoriesApi/SimpleStore.InventoriesApi.csproj
+
+  - name: sqlserver
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    env:
+      - name: SA_PASSWORD
+        value: "P@ssword"
+      - name: ACCEPT_EULA
+        value: "Y"
+    bindings:
+      - port: 1433
+        connectionString: Data Source=${host},${port};User Id=sa;Password=${env:SA_PASSWORD};MultipleActiveResultSets=True
