--- a/components/simplestore-dapr-config.yaml
+++ b/components/simplestore-dapr-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: dapr.io/v1alpha1
 kind: Configuration
 metadata:
-  name: simplestore-config
+  name: simplestore-dapr-config
 spec:
   tracing:
     samplingRate: "1"
