Add ingress for dapr-dashboard; update README

--- a/.helm/k8s/ingress.yaml
+++ b/.helm/k8s/ingress.yaml
@@ -12,7 +12,13 @@ spec:
   - host: simplestore-graphql-api.local
     http:
       paths:
-      - backend:
+      - path: /
+        backend:
           serviceName: graphql-api
           servicePort: 80
-        path: /
+  - http:
+      paths:
+        - backend:
+            serviceName: dapr-dashboard
+            servicePort: 8080
+      
