Feature/upgrade dapr 0.9 and tye 0.4 (#27)
* Refactor validation
- Add error filter for GraphQL
- Update documents

* Updage latest version for nuget libraries

* Update tye-min.yaml and docs
- By removing zipkin service; since it's been supported within Dapr 0.9
- Correct the Dapr's config's filename

* Upgrade nuget for Dapr and Tye

* add components-path; remove zipkin from tye

* Add ingress for dapr-dashboard; update README

* Update docs

* Update README

* Comment for registry from tye-k8s.yaml

* Update Ingress using path instead of host name

* Add healthcheck

* Deploy to k8s; update README
- tye: ingress. liveness and readiness probes
- k8s: ingress to access dapr's dashboard

--- a/tye-k8s.yaml
+++ b/tye-k8s.yaml
@@ -15,36 +15,70 @@ extensions:
   
   - name: seq
 
+ingress:
+  - name: simplestore-ingress
+    bindings:
+      - port: 80
+        protocol: http
+    rules:
+      - host: simplestore-graphql-api.local
+        path: /
+        service: graphql-api
+
 services:
   - name: graphql-api
     project: src/Services/GraphQL/SimpleStore.GraphQLApi/SimpleStore.GraphQLApi.csproj
-    replicas: 1
     buildProperties:
       - name: Configuration
         value: Release
     env:
       - name: ASPNETCORE_ENVIRONMENT
         value: "Production"
+    replicas: 2
+    liveness:
+      http:
+        path: /lively
+      initialDelay: 1
+    readiness:
+      http:
+        path: /ready
+      initialDelay: 1
     
   - name: products-api
     project: src/Services/ProductCatalog/SimpleStore.ProductCatalogApi/SimpleStore.ProductCatalogApi.csproj
-    replicas: 1
     buildProperties:
       - name: Configuration
         value: Release
     env:
       - name: ASPNETCORE__ENVIRONMENT
         value: "Production"
+    replicas: 2
+    liveness:
+      http:
+        path: /lively
+      initialDelay: 1
+    readiness:
+      http:
+        path: /ready
+      initialDelay: 1
 
   - name: inventories-api
     project: src/Services/Inventories/SimpleStore.InventoriesApi/SimpleStore.InventoriesApi.csproj
-    replicas: 1
     buildProperties:
       - name: Configuration
         value: Release
     env:
       - name: ASPNETCORE__ENVIRONMENT
         value: "Production"
+    replicas: 2
+    liveness:
+      http:
+        path: /lively
+      initialDelay: 1
+    readiness:
+      http:
+        path: /ready
+      initialDelay: 1
 
   - name: sqlserver
     image: mcr.microsoft.com/mssql/server:2019-latest
