--- a/.helm/k8s/ingress.yaml
+++ b/.helm/k8s/ingress.yaml
@@ -9,10 +9,9 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: simplestore-graphql-api.local
-    http:
+  - http:
       paths:
-      - backend:
-          serviceName: graphql-api
-          servicePort: 80
-        path: /
+        - backend:
+            serviceName: dapr-dashboard
+            servicePort: 8080
+      
