--- a/tye.yaml
+++ b/tye.yaml
@@ -6,11 +6,11 @@
 #
 name: simple-microservices
 extensions:
-  - name: zipkin
 
   - name: dapr
     log-level: debug
     config: simplestore-dapr-config
+    components-path: ./components
   
   - name: seq
     logPath: ./.logs
@@ -18,10 +18,10 @@ extensions:
 ingress:
   - name: simplestore-ingress
     bindings:
-      - port: 8080
+      - port: 80
         protocol: http
     rules:
-      - host: simplestore-graphql-api.local
+      - path: /
         service: graphql-api
 
 services:
