--- a/.helm/zipkin.dev.yaml
+++ b/.helm/zipkin.dev.yaml
@@ -23,10 +23,16 @@ resources:
     memory: 150Mi
 
 collector:
+  ingress:
+    enabled: true
+    annotations:
+      kubernetes.io/ingress.class: nginx
+    hosts:
+      - host: zipkin.simplestore.local 
+        paths: [ / ]
   service:
     type: ClusterIP
     port: 9411
-
 
 ui:
   ingress:
@@ -34,7 +40,7 @@ ui:
     annotations:
       kubernetes.io/ingress.class: nginx
     hosts:
-      - host: zipkin.simplestore.com
+      - host: zipkin.simplestore.local
         paths: [ /zipkin ]
 
   service:
